# code_analyzer

./: .gitignore  README.md  adjust_script.py  all_modules_combined.py  apply_changes.py  change_report.txt  code_analysis.py  combine_modules.py  config.py  detector.py  fix_project_structure.py  main.py  poo.py  pyproject.toml  split_modules.py  test_config.py  test_main.py  test_project_comparison.py  test_visualization.py  visualization.py  ändringsscript.py
flash/: create.py
src/code_analyzer/: analyzer.py  code_analysis.py  config.py  error_fix_script.py  main.py  project_comparison.py  visualization.py
tests/: test_analyzer.py  test_code_analysis.py  test_config.py  test_main.py  test_project_comparison.py  test_visualization.py
